[project]
name = "computingtools"
version = "0.1.0"
description = "This package is used to perform numerical experiments and provides a convenient interface for using various numerical methods."
authors = [
    {name = "Konstantin Epishin",email = "konstantinepishin@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

